--- a/assign4.Rmd
+++ b/assign4.Rmd
@@ -5,20 +5,66 @@ output: html_notebook
 
 
 For the regular expression exercises, try writing first using regular expressions directly, then try using rverbalexpressions. Provide the code for both. 
+```{r}
+library(lubridate)
+library(stringr)
+library(tidyverse)
+library(RVerbalExpressions)
+```
 
 # Part 1
 
 ## R4DS 16.4.5
 
 Create a vector of dates giving the first day of every month in the current year. 
+```{r}
+current_year <- as.character(year(today()))
+ymd(str_c(current_year, "-1-1")) + months(0:11)
+```
 
 Write a function that given your birthday (as a date), returns how old you are in years.
+```{r}
+get_age <- function(date){
+  (date %--% today())  %/% years(1)
+}
+
+get_age(ymd("1996-10-15"))
+```
+
 
 Write a function that given your birthday, returns the day of the week you were born on. 
+
+```{r}
+get_wday_b <- function(date){
+  wday(date)
+}
+
+get_wday_b(ymd("1996-10-15"))
+
+```
+
 
 ## R4DS 14.3.2.1
 
 Given the corpus of common words in stringr::words, create regular expressions that find all words that have seven letters or more. (Since this list is long, you might want to use the match argument to str_view() to show only the matching or non-matching words.)
+
+```{r}
+str_view(words, ".......", match = TRUE)
+```
+
+
+```{r}
+has_more_than_7 <- rx() %>% 
+  rx_start_of_line() %>% 
+  rx_word_char() %>%
+  rx_repeat_previous(7) %>%
+  rx_anything() %>% 
+  rx_end_of_line() %>% 
+  print()
+
+str_detect(words,has_more_than_7, match = T)
+```
+
 
 ## R4DS 14.3.3.1
 
@@ -26,9 +72,50 @@ Use str_detect to find all words that:
 
 That only contain consonants. (Hint: thinking about matching “not”-vowels.)
 
-Empirically verify the rule “i before e except after c”.
+
+```{r That only contain consonants.}
+str_detect(words, "^[^aeiou]+$")
+```
+
+
+```{r}
+not_vowels<- rx() %>% 
+  rx_start_of_line() %>% 
+  rx_something_but("aeiou") %>% 
+  rx_end_of_line() %>% 
+  print()
+
+str_detect(words, not_vowels)
+```
+
+
+
+Empirically verify the rule “i before e except after c”
+
+```{r Empirically verify the rule “i before e except after c”}
+length(str_subset(words, "(cei|[^c]ie)"))
+length(str_subset(words, "(cie|[^c]ei)"))
+```
+
+
+```{r}
+rule_ic <- rx() %>% 
+  rx_anything_but("c") %>% 
+  rx_find("i") %>% 
+  rx_find("e") %>% 
+  print()
+
+str_detect(words, rule_ic)
+```
+
+
 
 Create a regular expression that will match telephone numbers as commonly written in the US. Split this up into multiple expressions as needed.
+```{r phone number}
+str_detect(x, "\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d")
+```
+
+
 
 # Part 2
 
